# mongodb-atlas-api-client

./: main.py  pyproject.toml
api/: client.py  resources.py
